--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,17 @@
     <artifactId>JavaMavenGuiApp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.javamavenguiapp.JavaMavenGuiApp</exec.mainClass>
-    </properties>
+    </properties>        
 </project>
